--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <div class="navbar">
           <div class="dropdown">
             <button class="dropbtn">
-              Información
-              <i class="fa fa-caret-down"></i>
+              Información &#9660;
             </button>
             <div class="dropdown-content">
               <a href="./informacion/invitados.html">Invitados</a>
@@ -123,6 +122,57 @@
             massa justo. Nunc at enim dolor.
           </p>
 
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+            pharetra erat non tincidunt lacinia. Nam sed venenatis libero, eu
+            lacinia odio. Duis tincidunt felis ac justo mollis, quis posuere
+            ante semper. Nulla sodales purus eget mauris faucibus, sed lacinia
+            lorem placerat. Nunc porta pharetra gravida. Proin eleifend ac eros
+            eget auctor. Sed et tristique nunc. Donec magna nulla, pharetra sit
+            amet commodo sit amet, vulputate sed nisl. Etiam venenatis purus vel
+            porttitor posuere. In hac habitasse platea dictumst. Aliquam
+            tincidunt eros ex, in malesuada elit egestas ut. Vivamus commodo
+            eleifend eros id consectetur. Aliquam vulputate laoreet lorem, a
+            euismod felis tincidunt at. Vivamus nec ligula at quam consectetur
+            bibendum sit amet ut magna. Integer commodo velit urna, eu iaculis
+            libero eleifend ac. Aenean posuere bibendum odio sodales fermentum.
+            Nunc mi lectus, posuere a justo non, tincidunt consectetur nibh.
+            Etiam ac neque ornare metus tempor dapibus at id lectus. Donec nec
+            eros non arcu ornare porttitor eu ac enim. Morbi egestas tortor
+            augue, et tincidunt urna pretium quis. Nullam porttitor enim vel
+            felis euismod, eu pretium nunc scelerisque. Proin eleifend ipsum non
+            lacus fringilla, vitae pulvinar est accumsan. Suspendisse potenti.
+            Curabitur scelerisque auctor lacus in varius. Nulla mattis nunc id
+            eleifend gravida. Phasellus sapien velit, dapibus at orci a, tempus
+            porttitor mi. Praesent molestie tincidunt dui tristique mollis.
+            Vestibulum dictum lacinia diam, laoreet mollis augue congue sodales.
+            Sed ultrices lorem sed magna ultricies, nec vulputate nisl
+            venenatis. Suspendisse eleifend eu ante a consequat. In consectetur,
+            lacus a lacinia vehicula, nisi tellus tincidunt velit, a rutrum
+            lorem arcu et nisi. Morbi vel aliquet ipsum. Suspendisse interdum
+            nibh id nisi venenatis, sed venenatis ex ornare. Sed id porta eros.
+            Vivamus sollicitudin ex vel augue vulputate consequat. Morbi diam
+            magna, posuere quis semper at, tristique nec quam. Duis id dapibus
+            augue, rhoncus commodo magna. Donec suscipit accumsan elit quis
+            porttitor. Sed maximus est erat, nec pretium ligula eleifend id. Sed
+            ac fringilla tortor, ac pulvinar neque. Curabitur vitae lectus
+            lacus. Nam euismod mauris eget nisi iaculis iaculis. Ut tortor
+            nulla, consequat vitae tristique et, eleifend a mi. Quisque bibendum
+            eu risus in tempor. Morbi sollicitudin, purus ut tristique dapibus,
+            sapien est mattis velit, vel tristique ex justo sed sapien.
+            Suspendisse arcu augue, elementum ut eros quis, facilisis ornare
+            ligula. Vivamus cursus, enim non gravida fermentum, turpis libero
+            viverra nisl, at egestas leo ipsum a velit. Proin malesuada tortor
+            id efficitur tristique. Mauris massa massa, imperdiet suscipit
+            ultricies sit amet, mattis vel ex. Donec vel semper elit, ut
+            condimentum massa. Curabitur faucibus suscipit tortor, a tincidunt
+            felis ultricies a. Ut varius tempor dolor sed imperdiet. Aliquam
+            venenatis ultrices leo nec ornare. Aenean congue ac diam ac tempus.
+            Curabitur aliquet, ligula id aliquet cursus, est tortor tempor
+            libero, vitae elementum velit odio vitae orci. Pellentesque
+            porttitor bibendum lacus, a varius urna suscipit eget. Vestibulum et
+            massa justo. Nunc at enim dolor.
+          </p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
             pharetra erat non tincidunt lacinia. Nam sed venenatis libero, eu
