--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -22,8 +22,7 @@
         <div class="navbar">
           <div class="dropdown">
             <button class="dropbtn">
-              Información
-              <i class="fa fa-caret-down"></i>
+              Información &#9660;
             </button>
             <div class="dropdown-content">
               <a href="invitados.html">Invitados</a>
