--- a/informacion/invitados/meowri.html
+++ b/informacion/invitados/meowri.html
@@ -25,8 +25,7 @@
         <div class="navbar">
           <div class="dropdown">
             <button class="dropbtn">
-              Información
-              <i class="fa fa-caret-down"></i>
+              Información &#9660;
             </button>
             <div class="dropdown-content">
               <a href="../invitados.html">Invitados</a>
