--- a/informacion/invitados/ladybeard.html
+++ b/informacion/invitados/ladybeard.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -57,7 +59,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -71,51 +72,93 @@
         <div class="titleBox">
           <div id="title">
             <span>Lady Beard</span>
-        </div>
+          </div>
         </div>
         <div id="information">
+          <div class="picture">
+            <img src="../../images/artistas/artist10-avatar.jpg" />
+          </div>
           <article>
             <p>
-              Este artista australiano demostró desde pequeño su particular extravagancia y sus dotes como actor. Fue en la lucha libre donde encontró sus dos grandes pasiones, la actuación y las artes marciales, fusionándolas para crear su propia identidad. Movido por este deporte, se mudó a Hong Kong, donde obtuvo gran popularidad y renombre tras sus primeras peleas, en las que vestía un llamativo atuendo de lolita.
+              Este artista australiano demostró desde pequeño su particular
+              extravagancia y sus dotes como actor. Fue en la lucha libre donde
+              encontró sus dos grandes pasiones, la actuación y las artes
+              marciales, fusionándolas para crear su propia identidad. Movido
+              por este deporte, se mudó a Hong Kong, donde obtuvo gran
+              popularidad y renombre tras sus primeras peleas, en las que vestía
+              un llamativo atuendo de lolita.
             </p>
+            <div class="iframe">
+              <img
+                src="../../images/artistas/artist10-banner.jpeg"
+                id="picture-article"
+              />
+            </div>
             <p>
-              Con una gran cantidad de admiradores y bajo el nombre de “Wu Su Lui” (LadyBeard en cantonés), siguió su sueño de iniciar una carrera como cantante de Heavy Metal. Fue en 2011 cuando comenzó a atraer la atención del público japonés como integrante del grupo Ladybaby y su fama se ha extendido por todo el mundo. Actualmente, forma parte del grupo Deadlift Lolita junto a Reika Saiki.
+              Con una gran cantidad de admiradores y bajo el nombre de “Wu Su
+              Lui” (LadyBeard en cantonés), siguió su sueño de iniciar una
+              carrera como cantante de Heavy Metal. Fue en 2011 cuando comenzó a
+              atraer la atención del público japonés como integrante del grupo
+              Ladybaby y su fama se ha extendido por todo el mundo. Actualmente,
+              forma parte del grupo Deadlift Lolita junto a Reika Saiki.
             </p>
+            <div class="iframe">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/M8-vje-bq9c"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </article>
         </div>
-        </div>
+      </div>
     </main>
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
