--- a/informacion/invitados/overwatchvoices.html
+++ b/informacion/invitados/overwatchvoices.html
@@ -74,13 +74,20 @@
         </div>
         </div>
         <div id="information">
+          <div class="picture">
+            <img src="../../images/artistas/artist11-avatar.jpg" />
+          </div>
           <article>
             <p>
               Chloé Hollings es una actriz, artista de voz, escritora y cantante francesa, británica y australiana. Nació en París, Francia, pero pasó sus primeros años en Melbourne, Australia. Estos dos orígenes magníficos pero muy diferentes la han convertido en quien es: una artista versátil, sedienta de conocimiento, que busca la belleza en todo. Como actriz, trabajó principalmente en el teatro, pero es mejor conocida por su aparición en el programa de televisión francés «Versailles", Valerian and the City of a Thousand Planets, de Luc Besson, y por dar voz al famoso personaje de Overwatch: Widowmaker. También es autora de una memoria publicada en Francia en 2016.
             </p>
             <p>
-             Anjali Bhimani proporciona la voz del héroe Symmetra en Overwatch.Nació y creció en California y se graduó de la Universidad Northwestern con un certificado en teatro musical. Ella ha actuado en Broadway y también tiene una exitosa carrera en pantalla. Ella es más conocida por su papel de Nina Patel en el popular programa de televisión estadounidense Modern Family.
+             Anjali Bhimani proporciona la voz del héroe Symmetra en Overwatch. Nació y creció en California y se graduó de la Universidad Northwestern con un certificado en teatro musical. Ella ha actuado en Broadway y también tiene una exitosa carrera en pantalla. Ella es más conocida por su papel de Nina Patel en el popular programa de televisión estadounidense Modern Family.
             </p>
+      
+            <div class="iframe">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/UrfvQHbEocs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
           </article>
         </div>
         </div>
