--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -141,7 +141,7 @@
       <td rowspan="6" class="type-4">Bodas otakus <span>2 type</span></td>
       <td rowspan="4" class="type-1">Torneo Tekken<span>1 type</span></td>
       <td rowspan="6" class="type-1">Torneo LOL<span>1 type</span></td>
-      <td rowspan="2" class="type-1">Torneo CS:GO<span>5 type</span></td>
+      <td rowspan="2" class="type-1">Torneo Super Smash Bros<span>5 type</span></td>
     </tr>
       <tr>
       <th>17:00</th>
@@ -156,7 +156,7 @@
       <tr>
       <th>19:00</th>
       <td rowspan="2" class="type-1">Torneo YuGiOh<span>5 type</span></td>
-      <td rowspan="2" class="type-1">Torneo Pokémon<span>5 type</span></td>
+      <td rowspan="2" class="type-1">Torneo FIFA<span>5 type</span></td>
 
       </tr>
       <tr>
@@ -250,7 +250,7 @@
         <td rowspan="6" class="type-4">Bodas otakus <span>2 type</span></td>
         <td rowspan="4" class="type-1">Torneo Tekken<span>1 type</span></td>
         <td rowspan="6" class="type-1">Torneo LOL<span>1 type</span></td>
-        <td rowspan="2" class="type-1">Torneo CS:GO<span>5 type</span></td>
+        <td rowspan="2" class="type-1">Torneo Super Smash Bros<span>5 type</span></td>
       </tr>
         <tr>
         <th>17:00</th>
@@ -265,7 +265,7 @@
         <tr>
         <th>19:00</th>
         <td rowspan="2" class="type-1">Torneo YuGiOh<span>5 type</span></td>
-        <td rowspan="2" class="type-1">Torneo Pokémon<span>5 type</span></td>
+        <td rowspan="2" class="type-1">Torneo FIFA<span>5 type</span></td>
   
         </tr>
         <tr>
@@ -352,7 +352,7 @@
         <td rowspan="6" class="type-4">Bodas otakus <span>2 type</span></td>
         <td rowspan="4" class="type-1">Torneo Tekken<span>1 type</span></td>
         <td rowspan="6" class="type-1">Torneo LOL<span>1 type</span></td>
-        <td rowspan="2" class="type-1">Torneo CS:GO<span>5 type</span></td>
+        <td rowspan="2" class="type-1">Torneo Super Smash Bros<span>5 type</span></td>
       </tr>
         <tr>
         <th>17:00</th>
@@ -367,7 +367,7 @@
         <tr>
         <th>19:00</th>
         <td rowspan="2" class="type-1">Torneo YuGiOh<span>5 type</span></td>
-        <td rowspan="2" class="type-1">Torneo Pokémon<span>5 type</span></td>
+        <td rowspan="2" class="type-1">Torneo FIFA<span>5 type</span></td>
   
         </tr>
         <tr>
