--- a/informacion/bases/concursos.html
+++ b/informacion/bases/concursos.html
@@ -9,9 +9,7 @@
       rel="stylesheet"
     />
     <!-- CSS Main Layout-->
-    <link rel="stylesheet" href="./css/layout.css" />
-    <!-- CSS Index-->
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="../../css/layout.css" />
     <title>MANGUCA</title>
   </head>
   <body>
@@ -19,7 +17,7 @@
       <div class="header" id="header">
         <div class="logo">
           <a href="index.html"
-            ><img src="./images/plantilla/logo.png" alt="logo"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
           /></a>
         </div>
         <div class="navbar">
@@ -28,15 +26,15 @@
               Información &#9660;
             </button>
             <div class="dropdown-content">
-              <a href="./informacion/invitados.html">Invitados</a>
-              <a href="./informacion/actividades.html">Actividades</a>
-              <a href="./informacion/concursos.html">Concursos</a>
+              <a href="../invitados.html">Invitados</a>
+              <a href="../actividades.html">Actividades</a>
+              <a href="../concursos.html">Concursos</a>
             </div>
           </div>
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="location.href='./horarios/horarios.html'"
+              onclick="location.href='../../horarios/horarios.html'"
             >
               Horarios
             </button>
@@ -44,7 +42,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="location.href='./localizacion/localizacion.html'"
+              onclick="location.href='../../localizacion/localizacion.html'"
             >
               Localización
             </button>
@@ -52,7 +50,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="location.href='./entradas/inscripcion.html'"
+              onclick="location.href='../../entradas/inscripcion.html'"
             >
               Entradas
             </button>
@@ -227,49 +225,49 @@
         </div>
         <aside class="news">
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist1.jpg" />
+            <img id="miniature" src="../../images/artistas/artist1.jpg" />
             <div id="description">
               <p>AAAAAAAAAAAA</p>
             </div>
           </div>
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist2.jpg" />
+            <img id="miniature" src="../../images/artistas/artist2.jpg" />
             <div id="description">
               <p>AAAAAAAAAAAA</p>
             </div>
           </div>
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist3.jpg" />
+            <img id="miniature" src="../../images/artistas/artist3.jpg" />
             <div id="description">
               <p>Niño del puño</p>
             </div>
           </div>
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist4.jpg" />
+            <img id="miniature" src="../../images/artistas/artist4.jpg" />
             <div id="description">
               <p>Shirogane same</p>
             </div>
           </div>
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist5.jpg" />
+            <img id="miniature" src="../../images/artistas/artist5.jpg" />
             <div id="description">
               <p>AAAAAAAAAAAA</p>
             </div>
           </div>
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist6.jpg" />
+            <img id="miniature" src="../../images/artistas/artist6.jpg" />
             <div id="description">
               <p>AAAAAAAAAAAA</p>
             </div>
           </div>
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist7.jpg" />
+            <img id="miniature" src="../../images/artistas/artist7.jpg" />
             <div id="description">
               <p>AAAAAAAAAAAA</p>
             </div>
           </div>
           <div class="new">
-            <img id="miniature" src="./images/artistas/artist8.jpg" />
+            <img id="miniature" src="../../images/artistas/artist8.jpg" />
             <div id="description">
               <p>AAAAAAAAAAAA</p>
             </div>
@@ -287,35 +285,35 @@
         >
         </div>
         <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
+           <a href="../../informacion/invitados.html">Sobre nosotros</a> 
         </div>
         <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
+          <a href="../../informacion/invitados.html">Voluntariado</a> 
        </div>
        </div>
         <div class="colabout">
           <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
+            <a href="../../informacion/invitados.html">Contratación de stands</a> 
          </div>
          <div>
-          <a href="./informacion/bases/torneos.html">Bases de Torneos</a> 
+          <a href="torneos.html">Bases de Torneos</a> 
        </div>
        <div>
-        <a href="./informacion/bases/concurso.html">Bases de Cocursos</a> 
+        <a href="concurso.html">Bases de Cocursos</a> 
      </div>
         </div>
         <div class="colabout">
           <div>
-            <a href="./informacion/bases/politica.html">Política de privacidad y protección de datos</a> 
+            <a href="politica.html">Política de privacidad y protección de datos</a> 
          </div>
         </div>
       </div>
        <div class="contacto">
         <div class="contactos">
-            <img id="iconos" src="images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="images/iconos/insta.png" alt="Instagram" />
+            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
+            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
+            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
         </div>
         <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
       </div>
