--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -78,7 +78,7 @@
             <div id="rol">
               <p>Música</p>
             </div>
-            <div id="titles">
+            <div id="titlesActivity">
             FAKI
             </div>
             <div id="description">
@@ -93,8 +93,8 @@
               <div id="rol">
                 <p>Música</p>
               </div>
-              <div id="titles">
-              FAKI
+              <div id="titlesActivity">
+                FAKI
               </div>
               <div id="description">
                   <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
@@ -107,8 +107,8 @@
               <div id="rol">
                 <p>Música</p>
               </div>
-              <div id="titles">
-              FAKI
+              <div id="titlesActivity">
+                FAKI
               </div>
               <div id="description">
                   <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
