--- a/informacion/invitados/poltattoo.html
+++ b/informacion/invitados/poltattoo.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -57,7 +59,6 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
@@ -71,7 +72,7 @@
         <div class="titleBox">
           <div id="title">
             <span>Pol Tattoo</span>
-        </div>
+          </div>
         </div>
         <div id="information">
           <div class="picture">
@@ -79,7 +80,16 @@
           </div>
           <article>
             <p>
-              Empezó con el grafiti, continuó con la pintura y ahora se lanza al tatuaje… hasta de piezas arqueológicas. Es la historia de Samuel Martínez (Jerez, 1987), conocido artísticamente por el nombre de Pol Tattoo. Cuando era un chaval y comenzó con el bachillerato artístico pasaba más tiempo “fuera de la calle pintando grafitis que en clase”. Así dejaba por todos los rincones de Jerez la palabra “Swing”. Ahora Pol Tattoo tiene estudio propio en su ciudad natal y se anima a iniciar proyectos como el que este sábado ha tenido por primera vez en el Museo Arqueológico de Jerez.
+              Empezó con el grafiti, continuó con la pintura y ahora se lanza al
+              tatuaje… hasta de piezas arqueológicas. Es la historia de Samuel
+              Martínez (Jerez, 1987), conocido artísticamente por el nombre de
+              Pol Tattoo. Cuando era un chaval y comenzó con el bachillerato
+              artístico pasaba más tiempo “fuera de la calle pintando grafitis
+              que en clase”. Así dejaba por todos los rincones de Jerez la
+              palabra “Swing”. Ahora Pol Tattoo tiene estudio propio en su
+              ciudad natal y se anima a iniciar proyectos como el que este
+              sábado ha tenido por primera vez en el Museo Arqueológico de
+              Jerez.
             </p>
             <div class="iframe">
               <img
@@ -89,39 +99,51 @@
             </div>
           </article>
         </div>
-        </div>
+      </div>
     </main>
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
