--- a/informacion/invitados/ginny.html
+++ b/informacion/invitados/ginny.html
@@ -62,59 +62,78 @@
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="ginny.html">Ginny Di</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>Ginny Di</span>
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a class="active" href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist7-avatar.jpg" />
+          <div id="information">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="ginny.html">Ginny Di</a></li>
+              </ul>
+            </div>
+            <div class="titleBox">
+              <div id="title">
+                <span>Ginny Di</span>
+              </div>
+            </div>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist7-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Ginny Di es una cosplayer, YouTuber y cantante de Denver, cuyo
+                  repertorio incluye cosplays profesionales, sketches de comedia
+                  y videos de música. Empezó su carrera en el sector de las
+                  páginas web en 2011, uniéndose más tarde al grupo Not
+                  Literally Productions en YouTube, donde se hizo conocida por
+                  crear parodias musicales de pop muy pegadizas sobre Harry
+                  Potter, Juego de Tronos, Doctor Who…
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist7-banner.jpg"
+                    id="picture-article"
+                  />
+                </div>
+                <p>
+                  En 2014 decidió triunfar en solitario, y se empezó a hacer muy
+                  popular debido a sus cosplays de Arya de Juego de Tronos y de
+                  Jester de Critical Role. Sus cosplays inspirados en mujeres
+                  vintage se hicieron virales rápidamente, al igual que su traje
+                  de centauro completamente articulado de la película Fantasía
+                  de Disney. Ginny dirige ahora su propio negocio creando
+                  disfraces realmente detallados y escribiendo, produciendo y
+                  protagonizando videos musicales y sketches sobre fandoms y
+                  juegos de mesa.
+                </p>
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/QOawH-IZI0U"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </article>
+            </div>
           </div>
-          <article>
-            <p>
-              Ginny Di es una cosplayer, YouTuber y cantante de Denver, cuyo
-              repertorio incluye cosplays profesionales, sketches de comedia y
-              videos de música. Empezó su carrera en el sector de las páginas
-              web en 2011, uniéndose más tarde al grupo Not Literally
-              Productions en YouTube, donde se hizo conocida por crear parodias
-              musicales de pop muy pegadizas sobre Harry Potter, Juego de
-              Tronos, Doctor Who…
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist7-banner.jpg"
-                id="picture-article"
-              />
-            </div>
-            <p>
-              En 2014 decidió triunfar en solitario, y se empezó a hacer muy
-              popular debido a sus cosplays de Arya de Juego de Tronos y de
-              Jester de Critical Role. Sus cosplays inspirados en mujeres
-              vintage se hicieron virales rápidamente, al igual que su traje de
-              centauro completamente articulado de la película Fantasía de
-              Disney. Ginny dirige ahora su propio negocio creando disfraces
-              realmente detallados y escribiendo, produciendo y protagonizando
-              videos musicales y sketches sobre fandoms y juegos de mesa.
-            </p>
-            <div class="iframe">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/QOawH-IZI0U"
-                frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </article>
         </div>
       </div>
     </main>
