--- a/informacion/invitados/poltattoo.html
+++ b/informacion/invitados/poltattoo.html
@@ -62,42 +62,62 @@
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="poltattoo.html">Pol Tattoo</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>Pol Tattoo</span>
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a class="active" href="./overwatchvoices.html"
+              >Voces de Overwatch</a
+            >
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist12-avatar.jpg" />
-          </div>
-          <article>
-            <p>
-              Empezó con el grafiti, continuó con la pintura y ahora se lanza al
-              tatuaje… hasta de piezas arqueológicas. Es la historia de Samuel
-              Martínez (Jerez, 1987), conocido artísticamente por el nombre de
-              Pol Tattoo. Cuando era un chaval y comenzó con el bachillerato
-              artístico pasaba más tiempo “fuera de la calle pintando grafitis
-              que en clase”. Así dejaba por todos los rincones de Jerez la
-              palabra “Swing”. Ahora Pol Tattoo tiene estudio propio en su
-              ciudad natal y se anima a iniciar proyectos como el que este
-              sábado ha tenido por primera vez en el Museo Arqueológico de
-              Jerez.
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist12-banner.jpg"
-                id="picture-article"
-              />
+          <div id="information">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="poltattoo.html">Pol Tattoo</a></li>
+              </ul>
             </div>
-          </article>
+            <div class="titleBox">
+              <div id="title">
+                <span>Pol Tattoo</span>
+              </div>
+            </div>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist12-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Empezó con el grafiti, continuó con la pintura y ahora se
+                  lanza al tatuaje… hasta de piezas arqueológicas. Es la
+                  historia de Samuel Martínez (Jerez, 1987), conocido
+                  artísticamente por el nombre de Pol Tattoo. Cuando era un
+                  chaval y comenzó con el bachillerato artístico pasaba más
+                  tiempo “fuera de la calle pintando grafitis que en clase”. Así
+                  dejaba por todos los rincones de Jerez la palabra “Swing”.
+                  Ahora Pol Tattoo tiene estudio propio en su ciudad natal y se
+                  anima a iniciar proyectos como el que este sábado ha tenido
+                  por primera vez en el Museo Arqueológico de Jerez.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist12-banner.jpg"
+                    id="picture-article"
+                  />
+                </div>
+              </article>
+            </div>
+          </div>
         </div>
       </div>
     </main>
