--- a/informacion/invitados/sukisha.html
+++ b/informacion/invitados/sukisha.html
@@ -62,6 +62,22 @@
     </header>
     <main>
       <div class="main">
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a class="active" href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a href="./poltattoo.html">Pol Tattoo</a>
+          </div>
+          <div id="information">
         <div class="breadcrumb">
           <ul>
             <li><a href="../../index.html">Home</a></li>
