--- a/informacion/invitados/halex.html
+++ b/informacion/invitados/halex.html
@@ -62,51 +62,69 @@
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="halex.html">H Alexander</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>H Alexander</span>
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a class="active" href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist8-avatar.jpg" />
+          <div id="information">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="halex.html">H Alexander</a></li>
+              </ul>
+            </div>
+            <div class="titleBox">
+              <div id="title">
+                <span>H Alexander</span>
+              </div>
+            </div>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist8-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Hannah Alexander trabaja como artista a tiempo completo en
+                  Hampshire, UK. Se especializa en arte digital y diseño de
+                  vestuario, así como en retratos de acuarela. Su estilo es una
+                  combinación de la simplicidad moderna y el Art Nouveau retro.
+                  Es más conocida por sus diseños basados en personajes de la
+                  cultura pop, además sacó un libro con todo tipo de detalles
+                  para que fuese más fácil hacer cosplay de éstos.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist8-banner.jpg"
+                    id="picture-article"
+                  />
+                </div>
+                <p>
+                  No solo se dedica a la ilustración y al diseño, Hannah
+                  Alexander es cosplayer ocasional. Ha estudiado confección y
+                  diseño por lo que su nivel de costura es muy alto, fijándose
+                  sobretodo en los detalles de los trajes.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist8-banner2.jpg"
+                    id="picture-article"
+                  />
+                </div>
+              </article>
+            </div>
           </div>
-          <article>
-            <p>
-              Hannah Alexander trabaja como artista a tiempo completo en
-              Hampshire, UK. Se especializa en arte digital y diseño de
-              vestuario, así como en retratos de acuarela. Su estilo es una
-              combinación de la simplicidad moderna y el Art Nouveau retro. Es
-              más conocida por sus diseños basados en personajes de la cultura
-              pop, además sacó un libro con todo tipo de detalles para que fuese
-              más fácil hacer cosplay de éstos.
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist8-banner.jpg"
-                id="picture-article"
-              />
-            </div>
-            <p>
-              No solo se dedica a la ilustración y al diseño, Hannah Alexander
-              es cosplayer ocasional. Ha estudiado confección y diseño por lo
-              que su nivel de costura es muy alto, fijándose sobretodo en los
-              detalles de los trajes.
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist8-banner2.jpg"
-                id="picture-article"
-              />
-            </div>
-          </article>
         </div>
       </div>
     </main>
