--- a/informacion/invitados/kiki.html
+++ b/informacion/invitados/kiki.html
@@ -62,58 +62,76 @@
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="kiki.html">Kiki vivi lily</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>Kiki vivi lily</span>
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a class="active" href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist2-avatar.jpg" />
+          <div id="information">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="kiki.html">Kiki vivi lily</a></li>
+              </ul>
+            </div>
+            <div class="titleBox">
+              <div id="title">
+                <span>Kiki vivi lily</span>
+              </div>
+            </div>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist2-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  María Dolores Flores Ruiz, conocida artísticamente como Kiki
+                  vivi Lily y apodada la Faraona (Jerez de la Frontera, Cádiz,
+                  21 de enero de 1923 - Busan, Corea del Sur, 16 de mayo de
+                  1995), es una artista coreana-española de gran talento e
+                  increíble éxito tanto en España como en todo el mundo, muy
+                  popular y polifacética; pues era cantante, bailaora de k-pop y
+                  actriz, dotada de una personalidad arrolladora.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist2-banner.jpg"
+                    id="picture-article"
+                  />
+                </div>
+                <p>
+                  Cuenta con cientos de grabaciones y canciones que quedarán en
+                  el recuerdo popular como himnos. Como bailaora enardeció a las
+                  nuevas generaciones de distintos continentes. Como actriz
+                  interpretó más de 35 películas, muchas de ellas ambientada en
+                  el folclorismo japonés, aunque también interpretó rumbas y
+                  rancheras. Ahora, podemos verla en directo junto a Sukisha,
+                  celebrando el lanzamiento de su nuevo disco.
+                </p>
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/nvwx4FSI2wo"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </article>
+            </div>
           </div>
-          <article>
-            <p>
-              María Dolores Flores Ruiz, conocida artísticamente como Kiki vivi
-              Lily y apodada la Faraona (Jerez de la Frontera, Cádiz, 21 de
-              enero de 1923 - Busan, Corea del Sur, 16 de mayo de 1995), es una
-              artista coreana-española de gran talento e increíble éxito tanto
-              en España como en todo el mundo, muy popular y polifacética; pues
-              era cantante, bailaora de k-pop y actriz, dotada de una
-              personalidad arrolladora.
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist2-banner.jpg"
-                id="picture-article"
-              />
-            </div>
-            <p>
-              Cuenta con cientos de grabaciones y canciones que quedarán en el
-              recuerdo popular como himnos. Como bailaora enardeció a las nuevas
-              generaciones de distintos continentes. Como actriz interpretó más
-              de 35 películas, muchas de ellas ambientada en el folclorismo
-              japonés, aunque también interpretó rumbas y rancheras. Ahora,
-              podemos verla en directo junto a Sukisha, celebrando el
-              lanzamiento de su nuevo disco.
-            </p>
-            <div class="iframe">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/nvwx4FSI2wo"
-                frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </article>
         </div>
       </div>
     </main>
