--- a/informacion/invitados/ladybeard.html
+++ b/informacion/invitados/ladybeard.html
@@ -62,57 +62,76 @@
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="ladybeard.html">Lady Beard</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>Lady Beard</span>
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a class="active" href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist10-avatar.jpg" />
+          <div id="information">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="ladybeard.html">Lady Beard</a></li>
+              </ul>
+            </div>
+            <div class="titleBox">
+              <div id="title">
+                <span>Lady Beard</span>
+              </div>
+            </div>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist10-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Este artista australiano demostró desde pequeño su particular
+                  extravagancia y sus dotes como actor. Fue en la lucha libre
+                  donde encontró sus dos grandes pasiones, la actuación y las
+                  artes marciales, fusionándolas para crear su propia identidad.
+                  Movido por este deporte, se mudó a Hong Kong, donde obtuvo
+                  gran popularidad y renombre tras sus primeras peleas, en las
+                  que vestía un llamativo atuendo de lolita.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist10-banner.jpeg"
+                    id="picture-article"
+                  />
+                </div>
+                <p>
+                  Con una gran cantidad de admiradores y bajo el nombre de “Wu
+                  Su Lui” (LadyBeard en cantonés), siguió su sueño de iniciar
+                  una carrera como cantante de Heavy Metal. Fue en 2011 cuando
+                  comenzó a atraer la atención del público japonés como
+                  integrante del grupo Ladybaby y su fama se ha extendido por
+                  todo el mundo. Actualmente, forma parte del grupo Deadlift
+                  Lolita junto a Reika Saiki.
+                </p>
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/M8-vje-bq9c"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </article>
+            </div>
           </div>
-          <article>
-            <p>
-              Este artista australiano demostró desde pequeño su particular
-              extravagancia y sus dotes como actor. Fue en la lucha libre donde
-              encontró sus dos grandes pasiones, la actuación y las artes
-              marciales, fusionándolas para crear su propia identidad. Movido
-              por este deporte, se mudó a Hong Kong, donde obtuvo gran
-              popularidad y renombre tras sus primeras peleas, en las que vestía
-              un llamativo atuendo de lolita.
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist10-banner.jpeg"
-                id="picture-article"
-              />
-            </div>
-            <p>
-              Con una gran cantidad de admiradores y bajo el nombre de “Wu Su
-              Lui” (LadyBeard en cantonés), siguió su sueño de iniciar una
-              carrera como cantante de Heavy Metal. Fue en 2011 cuando comenzó a
-              atraer la atención del público japonés como integrante del grupo
-              Ladybaby y su fama se ha extendido por todo el mundo. Actualmente,
-              forma parte del grupo Deadlift Lolita junto a Reika Saiki.
-            </p>
-            <div class="iframe">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/M8-vje-bq9c"
-                frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </article>
         </div>
       </div>
     </main>
