--- a/informacion/invitados/laia.html
+++ b/informacion/invitados/laia.html
@@ -62,68 +62,87 @@
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="laia.html">Laia López</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>Laia López</span>
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a class="active" href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist6-avatar" />
+          <div id="information">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="laia.html">Laia López</a></li>
+              </ul>
+            </div>
+            <div class="titleBox">
+              <div id="title">
+                <span>Laia López</span>
+              </div>
+            </div>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist6-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Laia López, graduada en Bellas Artes en la Universidad de
+                  Barcelona, es una autodidacta en el campo de la ilustración
+                  digital y en el desarrollo de su propio estilo de dibujo.
+                  Empezó a dedicarse de manera profesional al arte a los 16 años
+                  y desde entonces ha seguido su camino por la rama de la
+                  ilustración digital y tradicional, especializándose en el
+                  diseño de personajes, desarrollo visual y el cómic/novela
+                  ilustrada. Comparte la mayoría de sus ilustraciones por redes
+                  sociales, donde alcanza más de un millón de seguidores.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist6-banner.jpg"
+                    id="picture-article"
+                  />
+                </div>
+                <p>
+                  Hace unos pocos meses, publicó su último trabajo: “Strawberry
+                  Moon” su primera obra en solitario, una novela gráfica juvenil
+                  en dos tomos sobre sirenas. Actualmente trabaja en ilustración
+                  editorial, ilustrando libros infantiles y juveniles para
+                  diversas editoriales españolas, como Planeta, Penguin Random
+                  House, Norma Editorial, La Galera… ¿Os suenan Mystical? ¿Sara
+                  y las goleadoras? ¿La diversión de Martina? ¡Los ha ilustrado
+                  ella! También tiene un artbook con una recopilación de sus
+                  mejores obras hasta el momento llamado “Gleaming” En su tiempo
+                  libre también hace fan art de las cosas que le apasionan,
+                  sobretodo de K-pop, anime y Disney.
+                </p>
+                <p>
+                  ¡No os perdáis a Laia López por primera vez en Manguca! Tendrá
+                  un stand donde podréis conocerla y comprar su merchandising y
+                  además dará una charla. ¡Os esperamos!
+                </p>
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/0zPVvGoMKdI"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </article>
+            </div>
           </div>
-          <article>
-            <p>
-              Laia López, graduada en Bellas Artes en la Universidad de
-              Barcelona, es una autodidacta en el campo de la ilustración
-              digital y en el desarrollo de su propio estilo de dibujo. Empezó a
-              dedicarse de manera profesional al arte a los 16 años y desde
-              entonces ha seguido su camino por la rama de la ilustración
-              digital y tradicional, especializándose en el diseño de
-              personajes, desarrollo visual y el cómic/novela ilustrada.
-              Comparte la mayoría de sus ilustraciones por redes sociales, donde
-              alcanza más de un millón de seguidores.
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist6-banner.jpg"
-                id="picture-article"
-              />
-            </div>
-            <p>
-              Hace unos pocos meses, publicó su último trabajo: “Strawberry
-              Moon” su primera obra en solitario, una novela gráfica juvenil en
-              dos tomos sobre sirenas. Actualmente trabaja en ilustración
-              editorial, ilustrando libros infantiles y juveniles para diversas
-              editoriales españolas, como Planeta, Penguin Random House, Norma
-              Editorial, La Galera… ¿Os suenan Mystical? ¿Sara y las goleadoras?
-              ¿La diversión de Martina? ¡Los ha ilustrado ella! También tiene un
-              artbook con una recopilación de sus mejores obras hasta el momento
-              llamado “Gleaming” En su tiempo libre también hace fan art de las
-              cosas que le apasionan, sobretodo de K-pop, anime y Disney.
-            </p>
-            <p>
-              ¡No os perdáis a Laia López por primera vez en Manguca! Tendrá un
-              stand donde podréis conocerla y comprar su merchandising y además
-              dará una charla. ¡Os esperamos!
-            </p>
-            <div class="iframe">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/0zPVvGoMKdI"
-                frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </article>
         </div>
       </div>
     </main>
