--- a/informacion/invitados/meowri.html
+++ b/informacion/invitados/meowri.html
@@ -62,52 +62,70 @@
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="meowri.html">Jenna Lynn</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>Jenna Lynn</span>
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a class="active" href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist9-avatar.jpg" />
+          <div id="information">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="meowri.html">Jenna Lynn</a></li>
+              </ul>
+            </div>
+            <div class="titleBox">
+              <div id="title">
+                <span>Jenna Lynn</span>
+              </div>
+            </div>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist9-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Cosplayer y estrella de Instagram que es conocida por publicar
+                  una variedad de retratos y fotos de modelaje en diferentes
+                  atuendos para sus más de 1.3 millones de seguidores. Sus
+                  destacados son Spiderman y Kusanagi de Ghost in the Shell.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist9-banner.jpg"
+                    id="picture-article"
+                  />
+                </div>
+                <p>
+                  Además de dedicarse a ser creadora de contenido, lleva una
+                  tienda online de su propia marca de ropa y es partner de la
+                  famosa web de streaming Twitch, donde conversa con sus fans y
+                  juega a videojuegos en directo.
+                </p>
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/U8rwdCg8aIc"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </article>
+            </div>
           </div>
-          <article>
-            <p>
-              Cosplayer y estrella de Instagram que es conocida por publicar una
-              variedad de retratos y fotos de modelaje en diferentes atuendos
-              para sus más de 1.3 millones de seguidores. Sus destacados son
-              Spiderman y Kusanagi de Ghost in the Shell.
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist9-banner.jpg"
-                id="picture-article"
-              />
-            </div>
-            <p>
-              Además de dedicarse a ser creadora de contenido, lleva una tienda
-              online de su propia marca de ropa y es partner de la famosa web de
-              streaming Twitch, donde conversa con sus fans y juega a
-              videojuegos en directo.
-            </p>
-            <div class="iframe">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/U8rwdCg8aIc"
-                frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </article>
         </div>
       </div>
     </main>
