--- a/informacion/invitados/odashima.html
+++ b/informacion/invitados/odashima.html
@@ -62,55 +62,73 @@
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="odashima.html">Odashima</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>Odashima</span>
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a class="active" href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist3-avatar.jpg" />
+          <div id="information">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="odashima.html">Odashima</a></li>
+              </ul>
+            </div>
+            <div class="titleBox">
+              <div id="title">
+                <span>Odashima</span>
+              </div>
+            </div>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist3-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Hitomi Odashima es la directora de animación y asistente de
+                  diseño de personajes de My Hero Academia, una de las series de
+                  anime más populares del momento. Su trabajo es reconocido en
+                  todo el mundo por millones de personas, podremos conocerla en
+                  persona durante la próxima edición Manguca.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist3-banner.jpg"
+                    id="picture-article"
+                  />
+                </div>
+                <p>
+                  Odashima también es conocida por su trabajo en el anime de
+                  Blue Exorcist, donde dirigió uno de los capítulos. Además, ha
+                  dejado su firma en series como Jewelpet Happiness y la OVA de
+                  Black Rock Shooter, entre otros proyectos. Uno de los más
+                  destacados es Digimon Adventure tri, en la que trabajó en el
+                  diseño de vestuario.
+                </p>
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/P2DEipI1obI"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </article>
+            </div>
           </div>
-          <article>
-            <p>
-              Hitomi Odashima es la directora de animación y asistente de diseño
-              de personajes de My Hero Academia, una de las series de anime más
-              populares del momento. Su trabajo es reconocido en todo el mundo
-              por millones de personas, podremos conocerla en persona durante la
-              próxima edición Manguca.
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist3-banner.jpg"
-                id="picture-article"
-              />
-            </div>
-            <p>
-              Odashima también es conocida por su trabajo en el anime de Blue
-              Exorcist, donde dirigió uno de los capítulos. Además, ha dejado su
-              firma en series como Jewelpet Happiness y la OVA de Black Rock
-              Shooter, entre otros proyectos. Uno de los más destacados es
-              Digimon Adventure tri, en la que trabajó en el diseño de
-              vestuario.
-            </p>
-            <div class="iframe">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/P2DEipI1obI"
-                frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </article>
         </div>
       </div>
     </main>
