--- a/informacion/invitados/overwatchvoices.html
+++ b/informacion/invitados/overwatchvoices.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Font Roboto -->
-     <link
-     href="https://fonts.googleapis.com/css?family=Roboto"
-     rel="stylesheet"
-   />
-   <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../../css/layout.css" />
-   <!-- CSS Invitados-->
-   <link rel="stylesheet" href="../../css/invitados.css" />
+    <!-- Font Roboto -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <!-- CSS Main Layout-->
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <!-- CSS Invitados-->
+    <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -57,72 +59,127 @@
           </div>
         </div>
       </div>
-    </div>
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="overwatchvoices.html">Voces Overwatch</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>Voces Overwatch</span>
-        </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist11-avatar.jpg" />
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a class="active" href="./overwatchvoices.html"
+              >Voces de Overwatch</a
+            >
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-          <article>
-            <p>
-              Chloé Hollings es una actriz, artista de voz, escritora y cantante francesa, británica y australiana. Nació en París, Francia, pero pasó sus primeros años en Melbourne, Australia. Estos dos orígenes magníficos pero muy diferentes la han convertido en quien es: una artista versátil, sedienta de conocimiento, que busca la belleza en todo. Como actriz, trabajó principalmente en el teatro, pero es mejor conocida por su aparición en el programa de televisión francés «Versailles", Valerian and the City of a Thousand Planets, de Luc Besson, y por dar voz al famoso personaje de Overwatch: Widowmaker. También es autora de una memoria publicada en Francia en 2016.
-            </p>
-            <p>
-             Anjali Bhimani proporciona la voz del héroe Symmetra en Overwatch. Nació y creció en California y se graduó de la Universidad Northwestern con un certificado en teatro musical. Ella ha actuado en Broadway y también tiene una exitosa carrera en pantalla. Ella es más conocida por su papel de Nina Patel en el popular programa de televisión estadounidense Modern Family.
-            </p>
-      
-            <div class="iframe">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/UrfvQHbEocs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div id="information">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="overwatchvoices.html">Voces Overwatch</a></li>
+              </ul>
             </div>
-          </article>
+            <div class="titleBox">
+              <div id="title">
+                <span>Voces Overwatch</span>
+              </div>
+            </div>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist11-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Chloé Hollings es una actriz, artista de voz, escritora y
+                  cantante francesa, británica y australiana. Nació en París,
+                  Francia, pero pasó sus primeros años en Melbourne, Australia.
+                  Estos dos orígenes magníficos pero muy diferentes la han
+                  convertido en quien es: una artista versátil, sedienta de
+                  conocimiento, que busca la belleza en todo. Como actriz,
+                  trabajó principalmente en el teatro, pero es mejor conocida
+                  por su aparición en el programa de televisión francés
+                  «Versailles", Valerian and the City of a Thousand Planets, de
+                  Luc Besson, y por dar voz al famoso personaje de Overwatch:
+                  Widowmaker. También es autora de una memoria publicada en
+                  Francia en 2016.
+                </p>
+                <p>
+                  Anjali Bhimani proporciona la voz del héroe Symmetra en
+                  Overwatch. Nació y creció en California y se graduó de la
+                  Universidad Northwestern con un certificado en teatro musical.
+                  Ella ha actuado en Broadway y también tiene una exitosa
+                  carrera en pantalla. Ella es más conocida por su papel de Nina
+                  Patel en el popular programa de televisión estadounidense
+                  Modern Family.
+                </p>
+
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/UrfvQHbEocs"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </article>
+            </div>
+          </div>
         </div>
-        </div>
+      </div>
     </main>
     <footer>
       <div class="footer">
         <div class="about">
-        <div class="colabout">
-        <div>
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-          >Contactar por correo</a
-        >
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Sobre nosotros</a>
+            </div>
+            <div>
+              <a href="./informacion/invitados.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="./informacion/invitados.html">Contratación de stands</a>
+            </div>
+          </div>
         </div>
-        <div>
-           <a href="./informacion/invitados.html">Sobre nosotros</a> 
-        </div>
-        <div>
-          <a href="./informacion/invitados.html">Voluntariado</a> 
-       </div>
-       </div>
-        <div class="colabout">
-          <div>
-            <a href="./informacion/invitados.html">Contratación de stands</a> 
-         </div>
-        </div>
-      </div>
-       <div class="contacto">
-        <div class="contactos">
+        <div class="contacto">
+          <div class="contactos">
             <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../../images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="../../images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="../../images/iconos/insta.png" alt="Instagram" />
-        </div>
-        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
-      </div>
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
